--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.18",
+    "autoprefixer": "^10.4.8",
     "jest": "^27.2.0",
     "jest-css-modules-transform": "^4.2.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.4"
