--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "react-responsive": "^9.0.0-beta.10",
+    "styled-components": "^5.3.5",
+    "twin.macro": "^2.8.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
