--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.18",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.8",
     "jest": "^27.2.0",
     "jest-css-modules-transform": "^4.2.0",
