--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.1.8",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "babel-plugin-macros": "^3.1.0"
   }
 }
